--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BookArena</title>
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+  <script defer src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
   {% block head %} {% endblock %}
 </head>
 
 <body>
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="{{ url_for('static', filename='images/magicBook.jpg') }}" alt="" width="30" height="24"
+          class="d-inline-block align-text-top">
+        BookArena
+      </a>
+    </div>
+
+  </nav>
 
   {% block body %} {% endblock %}
 
