Restructure whole folder structure✨

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img src="{{ url_for('static', filename='images/magicBook.jpg') }}" alt="" width="30" height="24"
           class="d-inline-block align-text-top">
         BookArena
