--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -7,3 +7,22 @@ body {
   text-align: center;
   padding: 2% 5%;
 }
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+nav li {
+  margin: 0 10px;
+}
+
+nav a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+  font-size: 16px;
+}
