--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -20,6 +20,17 @@
           class="d-inline-block align-text-top">
         BookArena
       </a>
+      <ul>
+        <li>
+          <a href="/books">Books</a>
+        </li>
+        <li>
+          <a href="/members">Members</a>
+        </li>
+        <li>
+          <a href="/transactions">Transactions</a>
+        </li>
+      </ul>
     </div>
 
   </nav>
