--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -1,57 +1,49 @@
 {% extends 'base.html' %}
 
 {% block body %}
-
-{% if books | length < 1 %} <div class="">
-  <p>No Books have been added to the database</p>
-  <p>Click
-    <a href="/books/add">
-      here
-    </a>
-    to add one
-  </p>
+<div class="container">
+  {% if books | length < 1 %} <div class="mt-5">
+    <p>No Books have been added to the database.</p>
+    <p>Click <a href="/books/add">here</a> to add one.</p>
+</div>
+{% else %}
+<div class="row justify-content-center m-3">
+  <div class="col-12 col-md-6">
+    <form action="/books/search/" method="post" class="d-flex">
+      <input type="text" name="query" class="form-control me-2" placeholder="Search...">
+      <select name="type" id="type" class="form-select me-2">
+        <option value="title">Title</option>
+        <option value="author">Author</option>
+      </select>
+      <button type="submit" class="btn btn-primary">Search</button>
+    </form>
   </div>
+</div>
 
-  {% else %}
+<div class="m-3">
+  <a href="/books/add" class="btn btn-primary">Add New Book</a>
+</div>
 
-  <div class="row justify-content-center m-3">
-    <div class="col-12 col-md-6">
-      <form action="/books/search/" method="post">
-        <input type="text" name="query" placeholder="Search...">
-        <select name="type" id="type">
-          <option value="title">Title</option>
-          <option value="author">Author</option>
-        </select>
-        <input type="submit">
-      </form>
-    </div>
-  </div>
-
-  <div class="m-3">
-    <a href="/books/add" class="btn btn-primary">Add New Book</a>
-  </div>
-
-  <div class="row">
-    {% for book in books %}
-    <div class="col-lg-3 col-md-4 col-sm-6">
-      <div class="card" ">
-    <img  src=" https://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg" class="card-img-top"
-        alt="picture of {{book.title}}">
-        <div class="card-body">
-          <h5 class="card-title">{{book.title}}</h5>
-          <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
-          <p class="card-text"><b>Language: </b> {{book.language}} </p>
-          <p class="card-text"><b>Quantity Left: </b> {{book.quantity}} </p>
-          <p class="card-text"><b>Rating: </b> {{book.rating}} </p>
-          <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
-          <a href="/books/edit/{{book.id}}" class="card-link">Edit Book</a>
-          <a href="#" class="card-link">Delete book</a>
-        </div>
+<div class="row">
+  {% for book in books %}
+  <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
+    <div class="card">
+      <img src="https://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg" class="card-img-top"
+        alt="Picture of {{book.title}}">
+      <div class="card-body">
+        <h5 class="card-title">{{book.title}}</h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
+        <p class="card-text"><b>Language:</b> {{book.language}}</p>
+        <p class="card-text"><b>Quantity Left:</b> {{book.quantity}}</p>
+        <p class="card-text"><b>Rating:</b> {{book.rating}}</p>
+        <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
+        <a href="/books/edit/{{book.id}}" class="card-link">Edit Book</a>
+        <a href="#" class="card-link">Delete Book</a>
       </div>
     </div>
-    {% endfor %}
   </div>
-
-  {% endif %}
-
-  {% endblock %}
+  {% endfor %}
+</div>
+{% endif %}
+</div>
+{% endblock %}
