--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -38,7 +38,7 @@
         <p class="card-text"><b>Rating:</b> {{book.rating}}</p>
         <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
         <a href="/books/edit/{{book.id}}" class="card-link">Edit Book</a>
-        <a href="#" class="card-link">Delete Book</a>
+        <a href="/books/delete/{{book.id}}" class="card-link">Delete Book</a>
       </div>
     </div>
   </div>
