--- a/app/templates/members.html
+++ b/app/templates/members.html
@@ -1,6 +1,4 @@
-{% extends 'base.html' %}
-
-{% block body %}
+{% extends 'base.html' %} {% block body %}
 <div class="container">
     {% if members | length < 1 %} <div class="mt-5">
         <p>No Members have yet been added to the database.</p>
@@ -10,11 +8,7 @@
 <div class="row justify-content-center m-3">
     <div class="col-12 col-md-6">
         <form action="/members/search/" method="post" class="d-flex">
-            <input type="text" name="query" class="form-control me-2" placeholder="Search...">
-            <select name="type" id="type" class="form-select me-2">
-                <option value="title">Name</option>
-                <option value="email">Email</option>
-            </select>
+            <input type="text" name="query" class="form-control me-2" placeholder="Search Members." />
             <button type="submit" class="btn btn-primary">Search</button>
         </form>
     </div>
@@ -32,7 +26,14 @@
                 <h5 class="card-title">{{member.first_name}} {{member.last_name}}</h5>
                 <h6 class="card-subtitle mb-2 text-muted">{{member.username}}</h6>
                 <p class="card-text"><b>Email:</b> {{member.email}}</p>
-                <p class="card-text"><b>Date Added:</b> {{member.date_added}}</p>
+                <p class="card-text">
+                    <b>Date Added:</b> {{ member.date_added.strftime('%Y-%m-%d
+                    %H:%M:%S') }}
+                </p>
+                <p class="card-text">
+                    <b>Date Last Updated:</b> {{ member.date_updated.strftime('%Y-%m-%d
+                    %H:%M:%S') }}
+                </p>
                 <p class="card-text"><b>Location:</b> {{member.location}}</p>
                 <a href="/members/edit/{{member.id}}" class="card-link">Edit Member</a>
                 <a href="#" class="card-link">Delete Member</a>
