add delete routes for member and book

--- a/app/templates/members.html
+++ b/app/templates/members.html
@@ -36,7 +36,7 @@
                 </p>
                 <p class="card-text"><b>Location:</b> {{member.location}}</p>
                 <a href="/members/edit/{{member.id}}" class="card-link">Edit Member</a>
-                <a href="#" class="card-link">Delete Member</a>
+                <a href="/members/delete/{{member.id}}" class="card-link">Delete Member</a>
             </div>
         </div>
     </div>
