Add transaction model + relationship
reorganize template folder

--- a/app/templates/books/form.html
+++ b/app/templates/books/form.html
@@ -30,7 +30,7 @@
             <div class="col-md-6">
               <label for="rating" class="form-label">Book Rating</label>
               <input value="{{book.rating}}" type="number" class="form-control" id="rating" name="rating" min="0"
-                max="5" placeholder="Enter book rating">
+                step="0.1" max="5" placeholder="Enter book rating">
             </div>
             <div class="col-md-6">
               <label for="quantity" class="form-label">Book Quantity</label>
