import from api - base version

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,9 @@
           <a href="/books">Books</a>
         </li>
         <li>
+          <a href="/import">Import</a>
+        </li>
+        <li>
           <a href="/members">Members</a>
         </li>
         <li>
