fix issue of adding books with same isbn13s

--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -6,8 +6,7 @@
 
 
 {% block body %}
-
-<div class="m-4 p-4">
+<div class="m-4 p-4 text-center">
   <h1 class="m-4">404</h1>
   <p>Invalid route Or the page has not yet been created!</p>
 </div>
