--- a/app/templates/members/list.html
+++ b/app/templates/members/list.html
@@ -14,11 +14,11 @@
     </div>
 </div>
 
-<div class="m-3">
+<div class="m-3 text-center">
     <a href="/members/add" class="btn btn-primary">Add New Member</a>
 </div>
 
-<div class="row">
+<div class="row text-center">
     {% for member in members %}
     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="card">
