--- a/app/templates/books/list.html
+++ b/app/templates/books/list.html
@@ -1,49 +1,56 @@
 {% extends 'base.html' %}
 
+
 {% block body %}
-<div class="container">
-  {% if books | length < 1 %} <div class="mt-5">
-    <p>No Books have been added to the database.</p>
-    <p>Click <a href="/books/add">here</a> to add one.</p>
-</div>
-{% else %}
-<div class="row justify-content-center m-3">
-  <div class="col-12 col-md-6">
-    <form action="/books/search/" method="post" class="d-flex">
-      <input type="text" name="query" class="form-control me-2" placeholder="Search...">
-      <select name="type" id="type" class="form-select me-2">
-        <option value="title">Title</option>
-        <option value="author">Author</option>
-      </select>
-      <button type="submit" class="btn btn-primary">Search</button>
-    </form>
+<div class="book-list">
+  <div class="container">
+    {% if books | length < 1 %} <div class="mt-5">
+      <p>No Books have been added to the database.</p>
+      <p>Click <a href="/books/add">here</a> to add one.</p>
   </div>
-</div>
-
-<div class="m-3 text-center">
-  <a href="/books/add" class="btn btn-primary">Add New Book</a>
-</div>
-
-<div class="row">
-  {% for book in books %}
-  <div class="col-lg-3 col-md-4 col-sm-6 mb-4 text-center">
-    <div class="card">
-      <img src="https://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg" class="card-img-top"
-        alt="Picture of {{book.title}}">
-      <div class="card-body">
-        <h5 class="card-title">{{book.title}}</h5>
-        <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
-        <p class="card-text"><b>Language:</b> {{book.language}}</p>
-        <p class="card-text"><b>Publisher:</b> {{book.publisher}}</p>
-        <p class="card-text"><b>Rating:</b> {{book.rating}}</p>
-        <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
-        <a href="/books/edit/{{book.id}}" class="card-link">Edit Book</a>
-        <a href="/books/delete/{{book.id}}" class="card-link">Delete Book</a>
-      </div>
+  {% else %}
+  <div class="row justify-content-center m-md-3">
+    <div class="col-12 col-md-6">
+      <form action="/books/search/" method="post" class="d-flex">
+        <input type="text" name="query" class="form-control me-2" placeholder="Search...">
+        <select name="type" id="type" class="form-select me-2">
+          <option value="title">Title</option>
+          <option value="author">Author</option>
+        </select>
+        <button type="submit" class="btn btn-primary">Search</button>
+      </form>
     </div>
   </div>
-  {% endfor %}
-</div>
-{% endif %}
+
+  <div class="m-md-3 my-3 text-center">
+    <a href="/books/add" class="btn btn-primary">Add New Book</a>
+  </div>
+
+  <div class="row mx-md-4">
+    {% for book in books %}
+    <div class="col-md-4 col-sm-6 mb-4">
+      <div class="card h-100 d-flex flex-column">
+        <div class="card-img-container">
+          <img src="https://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg" class="card-img-top img-fluid"
+            alt="Picture of {{book.title}}">
+        </div>
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">{{book.title}}</h5>
+          <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
+          <p class="card-text"><b>Language:</b> {{book.language}}</p>
+          <p class="card-text"><b>Publisher:</b> {{book.publisher}}</p>
+          <p class="card-text"><b>Rating:</b> {{book.rating}}</p>
+          <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
+          <div class="row mt-3">
+            <a href="/books/edit/{{book.id}}" class="col card-link">Edit Book</a>
+            <a href="/books/delete/{{book.id}}" class="col card-link">Delete Book</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+
+  {% endif %}
 </div>
 {% endblock %}
