--- a/app/templates/members/list.html
+++ b/app/templates/members/list.html
@@ -18,7 +18,7 @@
     <a href="/members/add" class="btn btn-primary">Add New Member</a>
 </div>
 
-<div class="row text-center">
+<div class="row">
     {% for member in members %}
     <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
         <div class="card">
@@ -28,11 +28,11 @@
                 <p class="card-text"><b>Email:</b> {{member.email}}</p>
                 <p class="card-text">
                     <b>Date Added:</b> {{ member.date_added.strftime('%Y-%m-%d
-                    %H:%M:%S') }}
+                    %H:%M') }}
                 </p>
                 <p class="card-text">
-                    <b>Date Last Updated:</b> {{ member.date_updated.strftime('%Y-%m-%d
-                    %H:%M:%S') }}
+                    <b>Last Updated:</b> {{ member.date_updated.strftime('%Y-%m-%d
+                    %H:%M') }}
                 </p>
                 <p class="card-text"><b>Location:</b> {{member.location}}</p>
                 <a href="/members/edit/{{member.id}}" class="card-link">Edit Member</a>
