--- a/app/templates/books/list.html
+++ b/app/templates/books/list.html
@@ -4,28 +4,29 @@
 {% block body %}
 <div class="book-list">
   <div class="container">
-    {% if books | length < 1 %} <div class="mt-5">
-      <p>No Books have been added to the database.</p>
-      <p>Click <a href="/books/add">here</a> to add one.</p>
+
+    <div class="row justify-content-center m-md-3">
+      <div class="col-12 col-md-6">
+        <form action="/books/search/" method="post" class="d-flex">
+          <input type="text" name="query" value="{{query}}" class="form-control me-2" placeholder="Search...">
+          <select name="type" id="type" class="form-select me-2">
+            <option value="title" {% if query_type=='title' %}selected{% endif %}>Title</option>
+            <option value="author" {% if query_type=='author' %}selected{% endif %}>Author</option>
+          </select>
+          <button type="submit" class="btn btn-primary">Search</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="m-md-3 my-3 text-center">
+      <a href="/books/add" class="btn btn-primary">Add New Book</a>
+    </div>
+
+    {% if books | length < 1 %} <div class="mt-5 text-center">
+      <p>No matching books have been added to the database.</p>
+      <p>Try adding new books to perform operations✨</p>
   </div>
   {% else %}
-  <div class="row justify-content-center m-md-3">
-    <div class="col-12 col-md-6">
-      <form action="/books/search/" method="post" class="d-flex">
-        <input type="text" name="query" class="form-control me-2" placeholder="Search...">
-        <select name="type" id="type" class="form-select me-2">
-          <option value="title">Title</option>
-          <option value="author">Author</option>
-        </select>
-        <button type="submit" class="btn btn-primary">Search</button>
-      </form>
-    </div>
-  </div>
-
-  <div class="m-md-3 my-3 text-center">
-    <a href="/books/add" class="btn btn-primary">Add New Book</a>
-  </div>
-
   <div class="m-4">
     <h2>Available Books</h2>
   </div>
@@ -33,13 +34,13 @@
     {% for book in books %}
     <div class="col-md-4 col-sm-6 mb-4">
       <div class="card h-100 d-flex flex-column">
-        <a class="content" href="/books/details/{{book.id}}" style="text-decoration: none;">
+        <a class="content" href="/books/{{book.id}}" style="text-decoration: none;">
           <div class="card-img-container">
             <img src="https://covers.openlibrary.org/b/isbn/{{book.isbn}}-M.jpg" class="card-img-top img-fluid"
               alt="Picture of {{book.title}}">
           </div>
           <div class="card-body d-flex flex-column px-md-5">
-            <h5 class="card-title underline-on-hover">{{book.title}}</h5>
+            <h5 class="card-title text-decoration-underline">{{book.title}}</h5>
             <h6 class="card-subtitle mb-2 text-muted">{{book.author}}</h6>
             <p class="card-text"><b>Language:</b> {{book.language}}</p>
             <p class="card-text"><b>Publisher:</b> {{book.publisher}}</p>
@@ -47,9 +48,9 @@
             <h6 class="card-subtitle mb-2 text-muted">ISBN: {{book.isbn}}</h6>
           </div>
         </a>
-        <div class="row container mb-4 mx-4">
-          <a href="/books/edit/{{book.id}}" class="col card-link">Edit Book</a>
-          <a href="/books/delete/{{book.id}}" class="col card-link">Delete Book</a>
+        <div class="container px-5">
+          <a href="/books/edit/{{book.id}}" class="ml-4 btn btn-sm btn-outline-primary">Edit Book</a>
+          <a href="/books/delete/{{book.id}}" class="btn btn-sm btn-outline-danger">Delete Book</a>
         </div>
       </div>
     </div>
