--- a/app/templates/members/details.html
+++ b/app/templates/members/details.html
@@ -8,6 +8,8 @@
             <p><b>Username:</b> {{ member.username }}</p>
             <p><b>Email:</b> {{ member.email }}</p>
             <p><b>Location:</b> {{ member.location }}</p>
+            <p><b>Date Added:</b> {{ member.date_added.strftime('%Y-%m-%d %H:%M') }}</p>
+            <p><b>Last Updated:</b> {{ member.date_updated.strftime('%Y-%m-%d %H:%M') }}</p>
         </div>
         <div class="col-md-6">
             <h3>Borrowed Books</h3>
@@ -22,7 +24,11 @@
                 <tbody>
                     {% for transaction in transactions %}
                     <tr>
-                        <td>{{ transaction.book.title }}</td>
+                        <td>
+                            <a href="/books/{{transaction.book.id}}">
+                                {{ transaction.book.title }}
+                            </a>
+                        </td>
                         <td>{{ transaction.due_date }}</td>
                         <td>
                             <form method="post" action="/transactions/return">
