--- a/app/templates/books/details.html
+++ b/app/templates/books/details.html
@@ -12,7 +12,7 @@
                     <select class="form-control" id="member" name="member">
                         {% for member in members %}
                         <option value="{{ member.id }}">{{ member.first_name }} {{ member.last_name }}
-                            ({{member.username}})</option>
+                            (@{{member.username}})</option>
                         {% endfor %}
                     </select>
                 </div>
